css/styles.css
:root {
    --primary: #3f1f12;
    --links: #150701;
    --hover: #15011d;
}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: whitesmoke;
    font-family: 'Exo 2', sans-serif;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

.btn {
    padding: .5rem;
    border-radius: .3rem;
    background-color: var(--primary);
}

.card {
    border-radius: .5rem;
    box-shadow: 3px 4px 7px -3px #e9e8e7;
}

.card-body {
    padding: .8rem 1rem;
}

.card:hover {
    box-shadow: 4px 5px 5px -2px #ebebeb;
}

.container {
    width: 94vw;
    max-width: 1000px;
    margin: 0 auto;
}

.wrapper {
    position: relative;
    min-height: 100vh;
}

.wrap {
    padding-bottom: 20vh;
}

/* Nav */
nav {
    background-color: var(--primary);
    position: sticky;
    top: 0;
    z-index: 999;
    box-shadow: 0 1px 4px 0 #160c08;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    height: 52px;
    width: 52px;
}

.nav-links {
    display: flex;
    align-items: center;
}

.nav-item:not(:last-child){
    margin-right: 2rem;
}

.nav-item a {
    font-size: 1rem;
    color: #fff;
}

.nav-item > a:hover {
    border-bottom: 1px solid #fff;
    transition: .6s ease-in;
}

.burger {
    display: none;
    cursor: pointer;
}

.burger div {
    width: 25px;
    height: 3px;
    background-color: rgb(226,226,226);
    margin: 5px;
    transition: all .3s ease;
}

@media screen and (max-width: 800px){
    body {
        overflow-x: hidden;
    }

    .nav-item:not(:last-child){
        margin-right: 0;
    }

    .nav-links {
        position: absolute;
        right: 0px;
        height: 92vh;
        top: 7.5vh;
        background-color: var(--primary);
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 50%;
        transform: translateX(100%);
        transition: transform .5s ease-in;
    }
    
    .nav-links li {
        opacity: 0;
        padding: 1rem 0;
    }

    .burger {
        display: block;
    }
}

@keyframes navLinkFade{
    from{
        opacity: 0;
        transform: translateX(50px);
    }
    to{
        opacity: 1;
        transform: translateX(0px);
    }
}

.toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
}

.toggle .line2 {
    opacity: 0;
}

.toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}

.nav-active {
    transform: translateX(0);
}
/* End Nav */


/* Header section */
.header {
    padding: 160px 0;
    background: url('../images//background.png');
}

.header .content {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.name {
    margin: .5rem 0;
}

.salut {
    font-size: 2.6rem;
    color: var(--links);
}

.salut span i{
    font-size: 3rem;
    color: #37221b;
}

.name {
    font-size: 2.8rem;
}

.name > span {
    font-family: 'Fredoka One', cursive;
    font-size: 3rem;
    color: var(--primary);
}

.occupation {
    font-size: 2.6rem;
    color: var(--hover);
}

.social {
    display: flex;
    align-items: center;  
    margin: 2rem 0;  
}

.social a > i {
    color: var(--links);
}

.social a > i:hover {
    color: var(--primary);
    transition: .6s ease-out;
}

.social > a:not(:last-child) {
    margin-right: 2rem;
}

.header .content img {
    width: 40%;
    height: fit-content;
}

@media(max-width: 800px){
    .name {
        margin: .5rem 0;
    }
    
    .salut {
        font-size: 2rem;
        color: var(--links);
    }
    
    .salut span i{
        font-size: 2rem;
        color: #37221b;
    }
    
    .name {
        font-size: 2rem;
    }
    
    .name > span {
        font-family: 'Fredoka One', cursive;
        font-size: 2.4rem;
        color: var(--primary);
    }
    
    .occupation {
        font-size: 2rem;
        color: var(--hover);
    }

    .social a>i {
        font-size: 2rem;
    }
    
}

@media(max-width: 600px){
    .name {
        margin: .5rem 0;
    }
    
    .salut {
        font-size: 1.6rem;
        color: var(--links);
    }
    
    .salut span i{
        font-size: 1.6rem;
        color: #37221b;
    }
    
    .name {
        font-size: 1.6rem;
    }
    
    .name > span {
        font-family: 'Fredoka One', cursive;
        font-size: 2rem;
        color: var(--primary);
    }
    
    .occupation {
        font-size: 1.6rem;
        color: var(--hover);
    }

    .social {
        margin: 1rem 0;
    }
    
    .social a:not(:last-child) {
        margin-right: .5rem;
    }
}

@media(max-width: 500px){
    .header {
        padding: 100px 0;
    }

    .header .content {
        flex-direction: column;
        align-items: flex-start;
    }

    .header .content > img {
        order: -1;
        margin-bottom: 2rem;
        width: 100%;
    }

    .header .content .description {
        order: 2;
        text-align: left;
    }
}

/* End Header */


/* About */
.about {
    padding: 160px 0;
    background-color: #e8e5e5;
}

.about .content {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.about .content > img {
    width: 40%;
    height: fit-content;
    flex: .4;
}

@media(max-width: 900px){
    .about .content {
        flex-direction: column;
    }

    .about .content > img {
        width: 60%;
        margin-bottom: 3rem;
    }
}

.about .content .description {
    flex: .6;
    margin-left: 5rem;
}

@media(max-width: 900px){
    .about .content .description {
        flex: .6;
        margin-left: 0;
    }
}

.about .description > .title {
    font-size: 4rem;
    border-bottom: 1px solid var(--primary);
}

.about .description p {
    margin: 1rem 0 2rem 0;
    letter-spacing: 1px;
}

.about .description > a {
    padding: .7rem 1rem;
    color: white;
    text-transform: uppercase;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.about .description >a:hover {
    background-color: var(--links);
    transition: .6s ease-out;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

/* End About */

/* Skills section */
.skills {
    padding: 130px 0;
    background: url('../images//background.png');
}

.skills .content .title {
    font-size: 4rem;
    margin-bottom: 2rem;
    border-bottom: 1px solid var(--primary);
}

.skills-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 1rem;
    align-items: center;
    justify-content: center;
    text-align: center;

}

@media(max-width: 600px){
    .skills-container {
        grid-template-columns: 1fr 1fr;
    }
}

.skills-container > i {
    color: var(--primary);
    cursor: pointer;
}

.skills-container >i:hover {
    color: var(--links);
    transition: .6s ease-in;
}
/* End skills */

/* Services */
.services {
    padding: 160px 0;
    background: url('../images/long-shadow.png');
}

.services .content > .title {
    font-size: 4rem;
    margin-bottom: 2rem;
    border-bottom: 1px solid whitesmoke;
    color: whitesmoke;
}

.services-container {
    display: flex;
    justify-content: space-between;
}

@media(max-width: 960px){
    .services-container {
        display: grid;
        grid-gap: 1rem;
        text-align: center;
        grid-template-columns: repeat(3, 1fr);
    }
}

@media(max-width: 800px){
    .services-container {
        display: grid;
        grid-gap: 1rem;
        text-align: center;
        grid-template-columns: 1fr 1fr;
    }
}

@media(max-width: 600px){
    .services-container {
        grid-template-columns: 1fr;
    }
}

.services-container > .card {
    cursor: pointer;
    color: #000;
    background-color: #fff;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.services-container > .card:hover {
    box-shadow: 2px 6px 10px 0 rgba(0,0,0,0.2);

}

.services-container > .card:not(:last-child){
    margin-right: 1rem;
}

@media(max-width: 960px){
    .services-container > .card:not(:last-child){
        margin-right: 0;
    }
}

.services-container .card > img {
    height: 150px;
    width: 200px;
}

@media(max-width: 500px){
    .services-container .card > img {
        width: 100%;
    }
}
/* End services */

/* Contact section */
.contact {
    padding: 160px 0;
    background-color: #e8e5e5;
}

.contact .content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.contact .content > .title {
    font-size: 4rem;
    margin-bottom: 2rem;
    border-bottom: 1px solid var(--primary);
}

.contact .content p {
    font-size: 3rem;
    margin-bottom: 2rem;
}

.contact .content a {
    padding: .7rem 2rem;
    border-radius: 1rem;
    background-color: var(--primary);
    text-transform: uppercase;
    color: white;
}

.contact .content a:hover {
    background-color: var(--links);
    transition: .6s ease-in;
}
/* End Contact */


/* Projects */
.projects {
    padding: 160px 0;
    background: url('../images/background.png');
}

.projects .content > .title {
    font-size: 4rem;
    margin-bottom: 2rem;
    border-bottom: 1px solid var(--primary);
}

.projects-container {
    display: flex;
    justify-content: center;
}

@media(max-width: 960px){
    .projects-container {
        display: grid;
        grid-gap: 1rem;
        grid-template-columns: repeat(3, 1fr);
    }
}

@media(max-width: 800px){
    .projects-container {
        display: grid;
        text-align: center;
        grid-template-columns: 1fr 1fr;
    }
}

@media(max-width: 600px){
    .projects-container {
        grid-template-columns: 1fr;
    }
}

.projects-container > .card {
    color: #000;
    background-color: whitesmoke;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    margin-bottom: 3rem;
}

.projects-container > .card:hover {
    box-shadow: 2px 6px 10px 0 rgba(0,0,0,0.2);
}

.projects-container > .card:not(:last-child) {
    margin-right: 2rem;
}

@media(max-width: 960px){
    .projects-container > .card:not(:last-child) {
        margin-right: 0;
    }
}

.projects-container .card > img {
    width: 200px;
    height: 150px;
}

@media(max-width: 500px){
    .projects-container .card > img {
        width: 100%;
    }
}

.projects-container .card-body h3 > a {
    color: var(--primary);
}

.projects-container .card-body h3 > a:hover {
    color: var(--links);
}

.view-more {
    display: flex;
    justify-content: center;
}

.more {
    padding: .7rem 2rem;
    border-radius: .3rem;
    background-color: var(--primary);
    text-transform: uppercase;
    color: white;
}

.more:hover {
    background-color: var(--links);
    transition: .6s ease-in;
}

/* End projects */

/* Footer */
footer {
    height: 20vh;
    position: absolute;
    width: 100%;
    bottom: 0;
    background-color: var(--primary);
}

.footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #fff;
    margin-top: 3rem;
}

@media(max-width: 600px){
    .footer {
        display: grid;
        grid-gap: 1rem;
        grid-template-columns: 1fr;
        margin-top: 1rem;
    }
}

.footer > p {
    font-size: small;
}

.footer p > i {
    color: red;
}

.footer p > a {
    color: whitesmoke;
}

.icons a >i:hover {
    color: var(--hover);
    transition: .6s ease-in;
}

.icons a > i {
    color: whitesmoke;
}

.icons > a:not(:last-child) {
    margin-right: 1rem;
}
/* End footer */


@media(max-width: 960px){
    .title {
        font-size: 2rem;
    }
}

